spacing and hyperlink fix

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ nav a:hover {
 .hero-container {
   display: flex;
   height: auto;
-  max-width: 3000px;
+  max-width: 1500px;
   /*min-width: 1000px;*/
   padding: 1rem calc((100vw - 1000px) / 2);
   /*margin-outside: 250px;*/
@@ -112,15 +112,18 @@ img {
 }
 
 .cont2 a{
-  font-family: "Avenir Next demibold", sans-serif;
-  font-weight: normal;
-  color: #09094f;
+  font-family: "Avenir Next", sans-serif;
+  font-weight: bold;
+  color: black;
   text-decoration: none;
   font-size: 1.2rem;
   line-height: 1.2;
   text-align: start;
   margin-bottom: 1px;
   /*color: black;*/
+}
+.cont2 a:hover{
+  color: #626161;
 }
 
 .hr-1 {
